# sessionkeeper

./: .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: build.yml
config/: providers.example.json
docs/: harvester-spec.md  operating.md
src/sessionkeeper/: __init__.py  __main__.py  cdp.py  config.py  http.py  metrics.py  provider.py  recipe.py  scheduler.py  server.py  session.py  vault.py  vault_azure.py
src/sessionkeeper/providers/: __init__.py  browser_harvest.py  http_refresh.py
tests/: conftest.py  test_browser_harvest.py  test_browser_harvest_liveness.py  test_cdp.py  test_cold_login.py  test_escalation.py  test_http_refresh.py  test_metrics.py  test_recipe.py  test_scheduler.py  test_session.py  test_vault.py  test_vault_azure.py
